--- a/MindLift/app/src/main/res/values-de/strings.xml
+++ b/MindLift/app/src/main/res/values-de/strings.xml
@@ -21,4 +21,5 @@
     <string name="drawer_list_strategies">Liste aller Bewältigungsstrategien</string>
     <string name="drawer_energy_level_progress">Energielevel Übersicht</string>
     <string name="drawer_inspirational_quotes">Inspirierendes Zitat</string>
+    <string name="coping_strategy_list">Bewältigungsstrategien</string>
 </resources>
